# encrypted-secure-fs

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  readme.md
.github/workflows/: cmake.yml
app/: main.cpp
docs/: example.json
include/efs/: admin.h  cli.h  crypto.h  database.h  efs.h  filesystem.h  filesystem_service.h  filesystem_utils.h  login.h  user.h  user_manager.h  utils.h
src/: admin.cpp  cli.cpp  crypto.cpp  database.cpp  efs.cpp  filesystem.cpp  filesystem_service.cpp  login.cpp  user.cpp  user_manager.cpp
